--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.12.0",
     "bitsandbytes>=0.49.0",
     "google-genai>=1.57.0",
+    "groq>=1.0.0",
     "openai>=2.14.0",
     "torch>=2.9.1",
     "transformers>=4.57.3",
